--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,15 +31,19 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^4.0.3
-  google_maps_flutter: ^2.12.3
   glassmorphism: ^3.0.0
-  http: ^0.13.6
+  flutter_map: ^8.1.1
+  http: ^1.2.1
   latlong2: ^0.9.0
   location: ^8.0.1
   permission_handler: ^12.0.1
   geocoding: ^4.0.0
-  google_place: ^0.4.7
-
+  geolocator: ^11.0.0
+  flutter_typeahead: ^5.2.0
+  flutter_polyline_points: ^2.1.0
+  google_maps_flutter: ^2.12.3
+  url_launcher: ^6.3.1
+  google_places_flutter: ^2.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
